--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
+blinker==1.4
+fake-factory==0.5.7
 Flask==0.10.1
 Flask-Cache==0.13.1
+Flask-Email==1.4.4
 Flask-Login==0.3.2
+Flask-Mail==0.9.1
+Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
+ipaddress==1.0.16
 itsdangerous==0.24
 Jinja2==2.8
 Markdown==2.6.6
 MarkupSafe==0.23
+mongoengine==0.10.6
+pkg-resources==0.0.0
+pymongo==3.2.2
+python-dateutil==2.5.3
+shortuuid==0.4.3
+six==1.10.0
 SQLAlchemy==1.0.12
 Werkzeug==0.11.9
+WTForms==2.1
