--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,13 @@ Flask-Mail==0.9.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
+gunicorn==19.6.0
 ipaddress==1.0.16
 itsdangerous==0.24
 Jinja2==2.8
 Markdown==2.6.6
 MarkupSafe==0.23
 mongoengine==0.10.6
-pkg-resources==0.0.0
 pymongo==3.2.2
 python-dateutil==2.5.3
 shortuuid==0.4.3
