--- a/supervisor.conf
+++ b/supervisor.conf
@@ -41,9 +41,9 @@ minprocs=200                 ; (min. avail process descriptors;default 200)
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
-serverurl=http://127.0.0.1:9001 ; use an http:// url to specify an inet socket
-username=user              ; should be same as http_username if set
-password=123                ; should be same as http_password if set
+;serverurl=http://127.0.0.1:9001 ; use an http:// url to specify an inet socket
+;username=user              ; should be same as http_username if set
+;password=123                ; should be same as http_password if set
 ;prompt=mysupervisor         ; cmd line prompt (default "supervisor")
 ;history_file=~/.sc_history  ; use readline history if available
 ; The below sample program section shows all possible program subsection values,
@@ -134,8 +134,8 @@ startsecs=0
 stopwaitsecs=0
 autostart=false
 autorestart=true
-stdout_logfile=/var/deploy/log/gunicorn.log
-stderr_logfile=/var/deploy/log/gunicorn.err
+stdout_logfile=/home/gdb/www/question/log/gunicorn.log
+stderr_logfile=/home/gdb/www/question/log/gunicorn.err
 
 [program:nginx]
 command=/usr/sbin/nginx
@@ -143,5 +143,5 @@ startsecs=0
 stopwaitsecs=0
 autostart=false
 autorestart=false
-stdout_logfile=/var/deploy/log/nginx.log
-stderr_logfile=/var/deploy/log/nginx.err
+stdout_logfile=/home/gdb/wwww/question/log/nginx.log
+stderr_logfile=/home/gdb/wwww/question/log/nginx.err
