--- a/supervisor.conf
+++ b/supervisor.conf
@@ -14,7 +14,7 @@ file=/tmp/supervisor.sock   ; (the path to the socket file)
 ;username=user              ; (default is no username (open server))
 ;password=123               ; (default is no password (open server))
 [inet_http_server]         ; inet (TCP) server disabled by default
-port=127.0.0.1:9001        ; (ip_address:port specifier, *:port for all iface)
+port=0.0.0.0:9001        ; (ip_address:port specifier, *:port for all iface)
 username=user              ; (default is no username (open server))
 password=123               ; (default is no password (open server))
 [supervisord]
@@ -127,9 +127,9 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;[include]
 ;files = relative/directory/*.ini
 
-[program:question]
+[program:manage]
 command=/home/gdb/www/question/venv/bin/gunicorn -w4 -b0.0.0.0:2170 manage:app
-directory=/home/gdb/www/question/source
+directory=/home/gdb/www/question/Question
 startsecs=0
 stopwaitsecs=0
 autostart=false
